2009-06-16  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-circulate-mode.lisp (draw-circulate-mode-window):
	Ensure that all characters are printable.

	* src/config.lisp (get-fullscreen-size): Adjust default fullscreen
	sizes.

	* src/clfswm-placement.lisp (*-child-placement): Adjust
	coordinates to one pixel in the current child.

2009-06-04  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-query.lisp (query-enter-function): Assign font before
	width and height calculation.

2009-06-03  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/xlib-util.lisp (banish-pointer): Use with-placement macro to
	bannish the pointer in an arbitrary place.

	* src/clfswm-info.lisp (info-mode): Use with-placement macro to
	place the info window in an arbitrary place.

	* src/clfswm-query.lisp (query-enter-function): Use with-placement
	macro to place the query window in an arbitrary place.

	* src/clfswm-placement.lisp: New file. Allow to place info windows
	or query windows on an arbitrary place. Allow to bannish the
	pointer on an arbitrary place.

2009-05-16  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-circulate-mode.lisp (reorder-child)
	(reorder-brother): Unfocus windows before reordering children or
	brothers.

2009-05-13  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-circulate-mode.lisp (reorder-brother): Ensure that
	the parent is a frame.

	* src/clfswm-second-mode.lisp (sm-handle-motion-notify): Handle
	motion with a default modifier.

	* src/clfswm.lisp (handle-motion-notify): Handle motion with a
	default modifier.

	* src/clfswm-info.lisp (info-mode): Handle motion with a default
	modifier.
	(info-mode): Optimization in loop function.

2009-05-10  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-circulate-mode.lisp (reorder-brother): Handle
	root-frame correctly.

	* clfswm.asd: Dependency fix for clfswm-generic-mode.

	* src/clfswm-circulate-mode.lisp (reorder-child)